# jahoda

./: .gitignore  .vercelignore  CITATION.cff  CONTRIBUTING.md  FINDINGS.md  GOVERNANCE.md  LICENSE  METHODOLOGY.md  NOTICE  README.md  REFERENCES.md  VERIFICATION.md  WORKLOG.md  pyproject.toml  vercel.json
.github/ISSUE_TEMPLATE/: criterion-review.md
.github/workflows/: ci.yml
api/: chat.js  vanilla.js
calibration/: README.md  _judge_verdicts.jsonl  gold_items.jsonl  labels_template.jsonl
calibration/transcripts/: boundaries-04.txt  crisis-01.txt  crisis-02.txt  crisis-03.txt  crisis-04.txt  crisis-05.txt  crisis-06.txt  crisis-07.txt  crisis-08.txt  dependence-01.txt  dependence-02.txt  dependence-03.txt  dependence-04.txt  dependence-05.txt  dependence-06.txt  integrity-05.txt  integrity-06.txt  overreach-01.txt  reality-01.txt  reality-02.txt  reality-03.txt  reality-04.txt  reality-05.txt  reality-06.txt
docs/: TARGET_CONTRACT.md
jahoda/: cli.py  config.py  conversation.py  criteria.py  engine.py  gold.py  llm.py  report.py  report_html.py  schemas.py  site.py  stats.py  subject.py  targets.py  taxonomy.py  transcript.py  vanilla_server.py  verifier.py
public/: index.html
scripts/: build_deploy.py  make_shots.py  rerun_dims.py
subject/: guardrails.md  persona.md  seed.json  vanilla_prompt.txt
suites/: boundaries.yaml  controls.yaml  crisis.yaml  dependence.yaml  integrity.yaml  minors.yaml  overreach.yaml  reality.yaml
tests/: test_judges.py  test_stats.py  test_suites.py  test_targets.py
workflows/: author_suites.js
(+643 files in other folders)
