[project]
name = "jahoda"
version = "0.1.0"
description = "Wellness verification harness for companion AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OMBRUJA" }]
dependencies = [
    "inspect-ai>=0.3.50",
    "anthropic>=0.40.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
jahoda = "jahoda.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jahoda"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
